--- a/templates/common/script.html
+++ b/templates/common/script.html
@@ -1,4 +1,4 @@
-{{define "Common/script"}}
+{{define "common/script"}}
 <!-- jQuery -->
 <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <!-- Bootstrap JavaScript -->
