--- a/templates/common/navbar.html
+++ b/templates/common/navbar.html
@@ -1,4 +1,4 @@
-{{define "Common/navbar"}}
+{{define "common/navbar"}}
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
