--- a/templates/summary/index.html
+++ b/templates/summary/index.html
@@ -1,8 +1,8 @@
-{{define "Summary/index.html"}} {{template "Common/header" .head}}
+{{define "summary/index"}} {{template "common/header" .}}
 </head>
 
 <body>
-    {{template "Common/navbar" .navbar}}
+    {{template "common/navbar" .}}
 
     <div class="container">
 
@@ -44,7 +44,7 @@
         <div class="row row-margin-bottom-50"></div>
     </div>
 
-    {{template "Common/script" .script}}
+    {{template "common/script" .script}}
 </body>
 
 </html>
